force-app/main/default/objects/PayGov_Configuration__mdt/PayGov_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Pay.gov federal payment gateway integration</description>
    <label>Pay.gov Configuration</label>
    <pluralLabel>Pay.gov Configurations</pluralLabel>
</CustomObject>