force-app/main/default/objects/PayGov_Configuration__mdt/fields/Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_ID__c</fullName>
    <description
  >Federal Agency ID assigned by Pay.gov for payment processing</description>
    <label>Agency ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>