force-app/main/default/objects/PayGov_Configuration__mdt/fields/Cancel_URL__c.field-meta.xml
<CustomField>
    <fullName>Cancel_URL__c</fullName>
    <description>URL for cancelled payment redirects from Pay.gov</description>
    <label>Cancel URL</label>
    <type>Url</type>
</CustomField>