force-app/main/default/objects/PayGov_Configuration__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description
  >Pay.gov environment: QA for testing, Production for live transactions</description>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA</fullName>
                <default>true</default>
                <label>QA</label>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>