force-app/main/default/objects/PayGov_Configuration__mdt/fields/Max_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Amount__c</fullName>
    <label>Max Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Maximum payment amount allowed for Pay.gov transactions. Defaults to $999,999.99 if not set.</description>
    <inlineHelpText>Set the maximum payment amount that can be processed through Pay.gov. Leave blank to use the default limit of $999,999.99.</inlineHelpText>
</CustomField>