force-app/main/default/objects/PayGov_Configuration__mdt/fields/Success_URL__c.field-meta.xml
<CustomField>
    <fullName>Success_URL__c</fullName>
    <description>URL for successful payment redirects from Pay.gov</description>
    <label>Success URL</label>
    <length>255</length>
    <type>Url</type>
</CustomField>